reworked DenormalizedCacheValue